[package]
name = "tr_gfa"
version = "0.1.0"
authors = ["Pierre Marijon <pmarijon@mpi-inf.mpg.de>"]
edition = "2018"

[dependencies]
petgraph	= "0.5"
csv		= "1"

# input output management
niffler	       = "2.3"

# CLI management
structopt      = "0.3"

# Logging and error management
log 	       = "0.4"
anyhow         = "1.0"
thiserror      = "1.0"
env_logger     = "0.8"

[profile.release]
debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false